<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DroidCast</string>
    <string name="hello_podcasters">Hello Podcasters!</string>
    <string name="menu_settings">Settings</string>
    <!-- Used during initial learning, remove these -->
    <string name="edit_message">Enter a message</string>
    <string name="send_text">Send</string>
    <string name="title_activity_display_message">Message Display</string>
    <!-- IN USE -->
    <string name="title_display">DroidCast</string>
    <string name="main_desc"></string>
    <string name="mycasts_button_text">My Podcasts</string>
    <string name="find_button_text">Find Podcasts</string>
    <string name="title_activity_my_casts">MyCasts</string>
    <string name="title_activity_find_casts">Find Casts</string>
    <string name="title_activity_player">DroidCast Player</string>
    <string name="title_activity_find_casts_results">Found Casts</string>
    <string name="title_activity_category_management">Category Management</string>
    <string name="find_casts_button">Find Podcasts!</string>
    <string name="find_casts_hint">Enter RSS URL for Podcast</string>
    <string name="search_casts">Search for your favorite Podcasts</string>
    <string name="my_casts_title_text">MyCasts</string>
    <string name="my_casts_desc_text">Search your favorite podcasts and select one to view a list of episodes</string>
    <string name="episodes_title">Episodes</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribed">Subscribed</string>
    <string name="category_text">Set Category</string>
    <string name="manage_cats">Manage Categories</string>
    <string name="current_cats">Current Categories</string>
    <string name="add_cat_hint">Add new category here</string>
    <string name="delete_cat_desc">To delete and existing category click and hold that category.  It will then be removed.</string>
    <string name="add_cat_label">Add Category</string>
    <string name="new_cats_text">New Category</string>
    <string name="channel_img_text">Podcast Image Not Found</string>
    <!-- COLORS -->
    <color name="black">#000000</color>
    <color name="silver">#DBDBDB</color>
    <color name="blue">#94B0FF</color>
    <!-- Constants -->

</resources>