<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".FindCastsActivity" >
	
    <TextView
        android:id="@+id/find_casts_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="40sp"
        android:textColor="@color/blue"
        android:text="@string/title_activity_find_casts"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/searchForCasts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/find_casts_title"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/search_casts"
        android:textColor="@color/silver"
        android:textSize="20sp" />
    
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:textColor="@color/silver"
        android:text="@string/find_casts_button" />    

    <EditText
        android:id="@+id/editText1"
        android:inputType="textUri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/searchForCasts"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/find_casts_hint"
        android:singleLine="true"
        android:textColor="@color/blue"
        android:textSize="18sp" >

        <requestFocus />
    </EditText>

</RelativeLayout>